<resources>
    <string name="app_name">Vmate</string>

    <!--    bottom nav bar text's-->
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="notifications">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="done_btn">Done</string>
    <string name="edit_profession">Edit your profession here!</string>
    <string name="edit_bio">Edit your profile bio here!</string>
    <string name="login_top_txt">keep connected, Feel Free</string>
    <string name="login">Login</string>
    <string name="send_email">Send Email</string>
    <string name="sing_up">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_ac">Do not have account</string>
    <string name="create">, Create</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="enter_msg">Enter your message...</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="profession">Profession</string>
    <string name="create_sing_up">Create</string>
    <string name="follow">Follow</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="no_notifications">No notifications found.</string>
    <string name="logout">Logout</string>
    <string name="my_friends">My Followers</string>
    <string name="discover">Discover</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="no_bio">No Bio</string>
    <string name="search_query">Search your friend here...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notifications</string>
    <string name="your_story">Your story</string>
    <string name="reset_password">Reset Password</string>
    <string name="backtologin">Back to login</string>
    <string name="choose_post">Choose your post</string>
    <string name="post_mention">Mention your #hashtags/description</string>


</resources>