<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/loginImg"
        android:layout_width="@dimen/_270mdp"
        android:layout_height="@dimen/_270mdp"
        android:src="@drawable/forgot_pass_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpTitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20font_mdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginImg"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/loginImg"
        app:layout_constraintTop_toBottomOf="@+id/loginImg"
        app:layout_constraintVertical_bias="0.944" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPasswordEmail_InputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18mdp"
        android:layout_marginEnd="@dimen/_18mdp"
        android:layout_marginTop="@dimen/_40mdp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/redish"
        app:boxStrokeErrorColor="@color/redish"
        app:endIconMode="clear_text"
        app:errorTextColor="@color/redish"
        app:hintTextColor="@color/redish"
        app:layout_constraintEnd_toEndOf="@+id/loginImg"
        app:layout_constraintStart_toStartOf="@+id/loginImg"
        app:layout_constraintTop_toBottomOf="@+id/loginImg"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordEmail_InputEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotic"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25mdp"
        android:background="@drawable/signup_login_btn_bg"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="@dimen/_15font_mdp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:cornerRadius="10dp"
        android:fontFamily="@font/robotic"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordEmail_InputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordEmail_InputLayout"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail_InputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>